# ericfeunekes.github.io

./: .buildinfo  .gitignore  Makefile  pyproject.toml  tasks.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
_sources/: markdown-notebooks.ipynb
blog/: _config.yml  _toc.yml  intro.md
blog/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
blog/_build/html/: .buildinfo
blog/_build/jupyter_execute/: markdown-notebooks.ipynb
blog/posts/: 1. data_utility_intro.md  async-rate-limit.ipynb  employer-copyright-open-source.md  why-use-callables-in-functional-programming.ipynb
docs/: genindex.html  intro.html  objects.inv  search.html  searchindex.js
docs/_sources/: markdown-notebooks.ipynb
docs/_sources/posts/: get-crossfit-data.ipynb  markdown-notebooks.ipynb
docs/posts/: get-crossfit-data.html  markdown-notebooks.html  markdown.html  notebooks.html  why-use-callables-in-functional-programming.html
resources/bill-c27/: clean_data.py  scrape_data.py
resources/bill-c27/data/: sitting-125.html  sitting-136.html
src/: getting.py  limiter.py
tests/: implementing-token-bucket.ipynb  test_getting.py  test_limiter.py
