[tool.poetry]
name = "ericfeunekes-github-io"
version = "0.1.0"
description = ""
authors = ["Eric Feunekes <eric.feunekes@pwc.com>"]
readme = "README.md"
packages = [{include = "ericfeunekes"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.build.dependencies]
ghp-import = "^2.1.0"
jupyter-book = "^0.13.1"
invoke = "^1.7.3"


[tool.poetry.group.format.dependencies]
black = "^22.10.0"
mypy = "0.981"
refurb = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
