[tool.poetry]
name = "ericfeunekes-github-io"
version = "0.1.0"
description = ""
authors = ["Eric Feunekes <eric.feunekes@pwc.com>"]
readme = "README.md"
packages = [{include = "ericfeunekes"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pandas = "^1.5.0"


[tool.poetry.group.format.dependencies]
black = "^22.10.0"
mypy = "0.981"
refurb = "^1.3.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
nbmake = "^1.3.4"
hypothesis = "^6.56.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
