[tool.poetry]
name = "ericfeunekes-github-io"
version = "0.1.0"
description = ""
authors = ["Eric Feunekes <eric.feunekes@pwc.com>"]
readme = "README.md"
packages = [{include = "ericfeunekes"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pandas = "^1.5.0"
pydantic = "^1.10.2"
pendulum = "^2.1.2"
matplotlib = "^3.6.1"
plotly = "^5.10.0"
aiochan = "^0.2.6"


[tool.poetry.group.format.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
mypy = "0.981"
refurb = "^1.3.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.56.2"
pytest-asyncio = "^0.19.0"


[tool.poetry.group.build.dependencies]
jupyter-book = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
